--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -32,6 +32,34 @@ on:
         type: string
       sanity_check_only_for_family:
         type: boolean
+      external_source_checkout:
+        type: boolean
+        description: "Whether source is from external repo (rocm-libraries/systems)"
+        default: false
+      external_source_path:
+        type: string
+        description: "Path to external repo checkout (e.g., external-repos/rocm-libraries)"
+        default: ""
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
+      repository_override:
+        type: string
+        description: "Override github.repository for testing (e.g., 'ROCm/rocm-libraries')"
+        default: ""
+      cmake_options:
+        type: string
+        description: "Extra CMake options for external repo projects"
+        default: ""
+      projects_to_test:
+        type: string
+        description: "Comma-separated list of projects to test (for external repos)"
+        default: ""
+      skip_patches:
+        type: string
+        description: "Comma-separated patch filenames to temporarily skip during patch removal coordination with external repos"
+        default: ""
 
 permissions:
   contents: read
@@ -50,6 +78,12 @@ jobs:
       build_variant_cmake_preset: ${{ inputs.build_variant_cmake_preset }}
       build_variant_suffix: ${{ inputs.build_variant_suffix }}
       expect_failure: ${{ inputs.expect_failure }}
+      external_source_checkout: ${{ inputs.external_source_checkout }}
+      external_source_path: ${{ inputs.external_source_path }}
+      therock_ref: ${{ inputs.therock_ref }}
+      repository_override: ${{ inputs.repository_override }}
+      extra_cmake_options: ${{ inputs.cmake_options }}
+      skip_patches: ${{ inputs.skip_patches }}
     permissions:
       contents: read
       id-token: write
@@ -86,7 +120,9 @@ jobs:
       artifact_run_id: ${{ inputs.artifact_run_id }}
       test_type: ${{ inputs.test_type }}
       test_labels: ${{ inputs.test_labels }}
+      projects_to_test: ${{ inputs.projects_to_test }}
       sanity_check_only_for_family: ${{ inputs.sanity_check_only_for_family == true }}
+      therock_ref: ${{ inputs.therock_ref }}
 
   test_linux_benchmarks:
     needs: [build_portable_linux_artifacts]
