--- a/.github/workflows/test_artifacts.yml
+++ b/.github/workflows/test_artifacts.yml
@@ -19,6 +19,10 @@ on:
         type: string
       test_labels:
         type: string
+      projects_to_test:
+        type: string
+        description: "Comma-separated list of projects to test (for external repos)"
+        default: ""
   workflow_call:
     inputs:
       artifact_group:
@@ -37,6 +41,14 @@ on:
         type: string
       test_labels:
         type: string
+      projects_to_test:
+        type: string
+        description: "Comma-separated list of projects to test (for external repos)"
+        default: ""
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
   push:
     branches:
       - ADHOCBUILD
@@ -55,22 +67,21 @@ jobs:
       platform: ${{ steps.configure.outputs.platform }}
       shard_arr: ${{ steps.configure.outputs.shard_arr }}
     steps:
-      - name: "Fetch 'build_tools' from repository"
-        if: ${{ runner.os == 'Windows' }}
+      - name: "Checkout TheRock repository"
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          sparse-checkout: build_tools
-          path: "prejob"
+          # For external repos calling TheRock, explicitly checkout ROCm/TheRock with sparse checkout of build_tools only.
+          # For TheRock's own CI (including forks), leave repository unspecified to respect forks.
+          repository: ${{ inputs.therock_ref && 'ROCm/TheRock' || '' }}
+          ref: ${{ inputs.therock_ref || github.ref }}
+          sparse-checkout: ${{ inputs.therock_ref && 'build_tools' || '' }}
 
       # Checkout failure is possible on Windows, as it's the first job on a GPU test runner.
       # Post-job cleanup isn't necessary since no executables are launched in this job.
       - name: Pre-job cleanup processes on Windows
         if: ${{ runner.os == 'Windows' }}
         shell: powershell
-        run: . '${{ github.workspace }}\prejob\build_tools\github_actions\cleanup_processes.ps1'
-
-      - name: "Checking out repository"
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        run: . '${{ github.workspace }}\build_tools\github_actions\cleanup_processes.ps1'
 
       - name: Setting up Python
         uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
@@ -84,6 +95,7 @@ jobs:
           AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
           TEST_TYPE: ${{ inputs.test_type }}
           TEST_LABELS: ${{ inputs.test_labels }}
+          PROJECTS_TO_TEST: ${{ inputs.projects_to_test }}
         run: python ./build_tools/github_actions/fetch_test_configurations.py
 
   test_sanity_check:
@@ -96,6 +108,7 @@ jobs:
       amdgpu_families: ${{ inputs.amdgpu_families }}
       test_runs_on: ${{ inputs.test_runs_on }}
       platform: ${{ needs.configure_test_matrix.outputs.platform }}
+      therock_ref: ${{ inputs.therock_ref }}
 
   test_components:
     name: 'Test ${{ matrix.components.job_name }}'
