--- a/.github/workflows/test_sanity_check.yml
+++ b/.github/workflows/test_sanity_check.yml
@@ -29,6 +29,10 @@ on:
         type: string
       platform:
         type: string
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
   push:
     branches:
       - ADHOCBUILD
@@ -68,22 +72,19 @@ jobs:
       THEROCK_BIN_DIR: ${{ github.workspace }}/build/bin
       AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
     steps:
-      - name: "Fetch 'build_tools' from repository"
-        if: ${{ runner.os == 'Windows' }}
+      - name: Checkout TheRock repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
         with:
-          sparse-checkout: build_tools
-          path: prejob
+          # When therock_ref is specified (external repos calling this workflow), checkout ROCm/TheRock with sparse checkout.
+          # When therock_ref is empty (TheRock's own CI, including forks), leave repository unspecified to respect forks.
+          repository: ${{ inputs.therock_ref && 'ROCm/TheRock' || '' }}
+          ref: ${{ inputs.therock_ref || github.ref }}
+          sparse-checkout: ${{ inputs.therock_ref && 'build_tools' || '' }}
 
       - name: Pre-job cleanup processes on Windows
         if: ${{ runner.os == 'Windows' }}
         shell: powershell
-        run: . '${{ github.workspace }}\prejob\build_tools\github_actions\cleanup_processes.ps1'
-
-      - name: Checkout Repository
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-        with:
-          repository: "ROCm/TheRock"
+        run: . '${{ github.workspace }}\build_tools\github_actions\cleanup_processes.ps1'
 
       - name: Pre-job cleanup Docker containers on Linux
         if: ${{ runner.os == 'Linux' }}
