Improve functional test logging and remove redundancy
- Remove write_step_summary wrapper and redundant log file writing
- Use display_name consistently in logging

Signed-off-by: Lenine Ajagappane <Lenine.Ajagappane@amd.com>

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -119,7 +119,7 @@ jobs:
 
   run_linux_extended_functional_tests:
     needs: [build_portable_linux_artifacts]
-    name: Run Extended Functional Tests
+    name: Run Linux Extended Functional Tests
     # Run extended functional tests if:
     # - Build succeeded (or using prebuilt artifacts)
     # - Not expecting failure
