Rename functional test workflow for clarity
- Rename test_extended_functional_tests.yml to test_functional_tests.yml
- Update all variables and references in workflow files and documentation

Signed-off-by: Lenine Ajagappane <Lenine.Ajagappane@amd.com>

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -22,7 +22,7 @@ on:
       benchmark_runs_on:
         type: string
         default: ""
-      run_extended_functional_tests:
+      run_functional_tests:
         type: boolean
         default: false
       expect_failure:
@@ -117,14 +117,14 @@ jobs:
       test_runs_on: ${{ inputs.benchmark_runs_on }}
       artifact_run_id: ${{ inputs.artifact_run_id }}
 
-  run_windows_extended_functional_tests:
+  run_windows_functional_tests:
     needs: [build_windows_artifacts]
-    name: Run Windows Extended Functional Tests
-    # Run extended functional tests if:
+    name: Run Windows Functional Tests
+    # Run functional tests if:
     # - Build succeeded (or using prebuilt artifacts)
     # - Not expecting failure
     # - Test runner is available (test_runs_on is set)
-    # - Extended functional flag is enabled (only set to true in ci_nightly.yml)
+    # - Functional flag is enabled (only set to true in ci_nightly.yml)
     if: >-
       ${{
         !failure() &&
@@ -135,9 +135,9 @@ jobs:
         ) &&
         inputs.expect_failure == false &&
         inputs.test_runs_on != '' &&
-        inputs.run_extended_functional_tests == true
+        inputs.run_functional_tests == true
       }}
-    uses: ./.github/workflows/test_extended_functional_tests.yml
+    uses: ./.github/workflows/test_functional_tests.yml
     secrets: inherit
     with:
       artifact_group: ${{ inputs.artifact_group }}
